--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "bower": "^1.8.8",
     "pulp": "^12.3.1",
-    "purescript": "^0.12.2"
+    "purescript": "^0.12.2",
+    "purescript-language-server": "^0.12.7"
   }
 }
