--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "scripts": {
-    "postinstall": "bower install"
+    "postinstall": "bower install",
+    "build": "pulp build",
+    "watch": "pulp --watch build"
   },
   "devDependencies": {
     "bower": "^1.8.8",
