--- a/bower.json
+++ b/bower.json
@@ -10,5 +10,9 @@
   "dependencies": {
     "purescript-web-dom": "^1.0.0",
     "purescript-functions": "^4.0.0"
+  },
+  "devDependencies": {
+    "purescript-psci-support": "^4.0.0",
+    "purescript-debug": "^4.0.0"
   }
 }
