--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
   ],
   "dependencies": {
     "purescript-web-dom": "^1.0.0",
-    "purescript-functions": "^4.0.0"
+    "purescript-functions": "^4.0.0",
+    "purescript-foreign": "^5.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^4.0.0",
