--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "devDependencies": {
     "bower": "^1.8.8",
+    "dotenv": "^6.2.0",
+    "download": "^7.1.0",
     "pulp": "^12.3.1",
     "purescript": "^0.12.2"
   }
