--- a/bower.json
+++ b/bower.json
@@ -8,11 +8,13 @@
     "output"
   ],
   "dependencies": {
-    "purescript-web-dom": "^1.0.0",
-    "purescript-functions": "^4.0.0"
+    "purescript-web-html": "^1.2.0",
+    "purescript-functions": "^4.0.0",
+    "purescript-foreign": "^5.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^4.0.0",
-    "purescript-debug": "^4.0.0"
+    "purescript-debug": "^4.0.0",
+    "purescript-spec-mocha": "^3.0.0"
   }
 }
