--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
   "scripts": {
     "postinstall": "bower install",
     "build": "pulp build",
-    "watch": "pulp --watch build"
+    "watch": "pulp --watch build",
+    "test:build": "dotenv pug test/pug -- -o dist && pulp browserify -I test/purs -m Test.Main -t dist/bundle.js",
+    "test:watch": "pulp --watch browserify -I test/purs -m Test.Main -t dist/bundle.js",
+    "test:run": "cd dist && static-server --port 9000"
   },
   "devDependencies": {
     "bower": "^1.8.8",
+    "dotenv-cli": "^1.4.0",
+    "mocha": "^6.0.1",
+    "pug-cli": "^1.0.0-alpha6",
     "pulp": "^12.3.1",
     "purescript": "^0.12.2",
-    "purescript-language-server": "^0.12.7"
+    "purescript-language-server": "^0.12.7",
+    "static-server": "^2.2.1"
   }
 }
