--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,8 +50,9 @@ jobs:
   auto-merge:
     runs-on: ubuntu-latest
     needs: [test]
-    if: github.event_name == 'pull_request' github.base_ref == 'master' && github.actor == 'dependabot[bot]'
+    if: github.event_name == 'pull_request' && github.base_ref == 'master' && github.actor == 'dependabot[bot]'
     steps:
-      - name: ahmadnassri/action-dependabot-auto-merge@v2
+      - name: automerge dependabot PRs
+        uses: ahmadnassri/action-dependabot-auto-merge@v2
         with:
           github-token: ${{ secrets.mytoken }}
