--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,14 +17,14 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
 
-      - name: cache yarn dependencies
+      - name: cache npm dependencies
         uses: actions/cache@v2
         with:
-          key: ${{ runner.os }}-yarn-${{ hashFiles('package.json') }}
+          key: ${{ runner.os }}-npm-${{ hashFiles('package.json') }}
           path: node_modules
 
       - name: install
-        run: yarn install
+        run: npm install
 
       - name: cache purescript dependencies
         uses: actions/cache@v2
@@ -35,15 +35,15 @@ jobs:
             output
 
       - name: bundle test code
-        run: yarn spago bundle-app -m Test.Main -t dist/bundle.js
+        run: npm run spago bundle-app -m Test.Main -t dist/bundle.js
 
       - name: build test page
-        run: yarn pug test/pug -o dist
+        run: npm run pug test/pug -o dist
         env:
           MAPS_API_KEY: ${{ secrets.MAPS_API_KEY }}
 
       - name: mocha tests
-        run: yarn mocha-headless-chrome -a no-sandbox -f dist/index.html
+        run: npm run mocha-headless-chrome -a no-sandbox -f dist/index.html
 
   # Automatically merge dependabot PRs if the tests pass and its not a major
   # version change.
