--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   },
   "devDependencies": {
     "dotenv-cli": "^7.4.2",
-    "mocha": "^8.4.0",
-    "mocha-headless-chrome": "^4.0.0",
+    "mocha": "^10.7.3",
+    "mocha-headless-chrome": "^3.1.0",
     "pug-cli": "^1.0.0-alpha6",
     "purescript": "^0.15.15",
-    "purescript-language-server": "^0.18.0"
+    "purescript-language-server": "^0.18.0",
+    "purs-tidy": "^0.11.0"
   },
   "dependencies": {
     "spago": "^0.93.39"
