--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "scripts": {
     "build": "spago build",
     "watch": "spago build --watch",
-    "test:build": "dotenv pug test/pug -- -o dist && spago bundle-app -m Test.Main -t dist/bundle.js",
+    "test:build": "dotenv pug3 test/pug -- -o dist && spago bundle-app -m Test.Main -t dist/bundle.js",
     "test:run": "mocha-headless-chrome -a no-sandbox -f dist/index.html"
   },
   "devDependencies": {
+    "@tokilabs/pug3-cli": "^3.0.1",
     "dotenv-cli": "^7.4.2",
     "mocha": "^10.7.3",
     "mocha-headless-chrome": "^3.1.0",
-    "pug-cli": "^1.0.0-alpha6",
     "purescript": "^0.15.15",
     "purescript-language-server": "^0.18.0",
     "purs-tidy": "^0.11.0"
